--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hola curso GIT</h1>
     <h1>Proyecto empresarial</h1>
         <p>Parrafo agregado</p>
+        <p>Parrafo numero 2</p>
 </body>
 </html>
